# insights-engine

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-entrypoint.sh  gunicorn.conf.py  makefile  pyproject.toml
.github/workflows/: build-insights-engine-push-tag-shared.yaml  ci.yaml
docker/: Dockerfile  docker-compose.yaml
infrastructure/django_app/: asgi.py  settings.py  wsgi.py
infrastructure/django_app/authentication/: authentication.py
infrastructure/django_app/dashboards/: apps.py  models.py
infrastructure/django_app/db/: apps.py
infrastructure/django_app/event_driven/: apps.py  handle.py
infrastructure/django_app/projects/: handle.py  models.py  project_dto.py
infrastructure/django_app/users/: apps.py
infrastructure/django_app/widgets/: apps.py  models.py
infrastructure/insights/: asgi.py  settings.py  wsgi.py
infrastructure/insights/authentication/: authentication.py
infrastructure/insights/dashboards/: models.py
infrastructure/insights/db/: apps.py
infrastructure/insights/event_driven/: handle.py
infrastructure/insights/projects/: handle.py  models.py  project_dto.py
insights/: asgi.py  celery.py  conftest.py  middleware.py  settings.py  shutdown.py  urls.py  utils.py  wsgi.py
insights/accounts/: entities.py  exceptions.py
insights/accounts/app/: usecases.py
insights/accounts/domain/: entities.py  exceptions.py  repositories.py
insights/accounts/tests/: test_entity_creation.py  test_user_creation_usecase.py
insights/authentication/: admin_sso.py  authentication.py  decorators.py  mixins.py  permissions.py  project_access.py  weni_auth.py
insights/authentication/services/: exceptions.py  jwt_service.py  project_auth.py
insights/authentication/tests/: decorators.py  test_authentication.py  (+4 more)
insights/commerce/: apps.py  clients.py  exceptions.py  serializers.py  services.py  urls.py  views.py
insights/core/: accessors.py  apps.py  middleware.py  requests.py  resolvers.py  shutdown.py  test_runner.py
insights/dashboards/: apps.py  entities.py  filters.py  models.py  serializers.py  tasks.py  viewsets.py
insights/event_driven/: apps.py  consumers.py  handle.py  handle_amq.py
insights/feature_flags/: client.py  criteria.py  serializers.py  service.py  urls.py  utils.py  views.py
insights/feedback/: admin.py  apps.py  choices.py  dataclass.py  models.py  services.py  validators.py  views.py
insights/human_support/: filters.py  services.py
insights/internals/: base.py
insights/metrics/: apps.py  urls.py
insights/projects/: apps.py  choices.py  dataclass.py  entities.py  handle.py  models.py  parsers.py  serializers.py  tasks.py  views.py  viewsets.py
insights/prompts/: entities.py
insights/reports/: apps.py  choices.py  factories.py  models.py  services.py  signals.py
insights/shared/: apps.py  models.py  viewsets.py
insights/sources/: apps.py  base.py  cache.py  clients.py  enums.py  factories.py  filter_strategies.py  filters.py  filtersets.py  query_builder.py  services.py
insights/tests/: test_utils.py
insights/users/: apps.py
insights/widgets/: apps.py  models.py  permissions.py  serializers.py  viewsets.py
(+485 files in other folders)
